# BERGEN-UP

./: .gitignore  README.md  config.py  datamodel.py  hello.py  main.py  pipeline.py  pyproject.toml
conf/: config.yaml
data/benchmark/NIAH/: needle_config.json
data/benchmark/functionchat_bench/: FunctionChat-Dialog-Sample.jsonl  FunctionChat-Singlecall-Sample.jsonl
data/benchmark/haystack/: haystack_0.txt  haystack_1.txt  haystack_2.txt
data/generation/: sample_generation_data.json
data/pre_retrieval/hyde/: sample_data.json
data/pre_retrieval/multi_query/: sample_data.json
data/pre_retrieval/query_decomposition/: sample_data.json
data/retrieval/: sample_retrieval_data.json
modules/: rag.py  utils.py
modules/benchmark/: __init__.py  evaluation.py
modules/benchmark/evaluation_framework/: __init__.py  niah_evaluation.py
modules/benchmark/function_chat/: __init__.py  evaluation.py
modules/benchmark/function_chat/utils/: __init__.py  (+1 more)
modules/chunking/: evaluation.py  utils.py
modules/chunking/chunker/: fixed_token_chunker.py  recursive_token_chunker.py  semantic_chunker.py
modules/chunking/evaluation_framework/: base_evaluation.py  general_evaluation.py  synthetic_evaluation.py
modules/generation/: evaluation.py
modules/generation/evaluation_framework/: g_eval.py
modules/post_retrieval/: evaluation.py
modules/pre_retrieval/: __init__.py  evaluation.py
modules/pre_retrieval/evaluation_framework/: __init__.py  base_evaluation.py  decomposition_evaluation.py  hyde_evaluation.py  multi_query_evaluation.py
modules/retrieval/: evaluation.py
(+17 files in other folders)
