[project]
name = "bergen-up"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.0.0",
    "fuzzywuzzy>=0.18.0",
    "hydra-core>=1.3.2",
    "instructor>=1.9.2",
    "multiprocess>=0.70.17",
    "openai>=1.70.0",
    "pandas>=2.2.3",
    "python-levenshtein>=0.27.1",
    "rich>=14.0.0",
    "tiktoken>=0.9.0",
    "tqdm>=4.67.1",
    "uuid>=1.30",
]
